fix btn bug on safari

--- a/dev/scss/input.scss
+++ b/dev/scss/input.scss
@@ -106,6 +106,9 @@ $innerPadding:10px;
 .button {
     @include field(55px);
     @extend %card;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
     border: none;
     text-align: center;
     background: $accentColor;
@@ -158,7 +161,7 @@ $innerPadding:10px;
     @extend %card;
     // @extend .container;
     margin: 0 auto;
-    height: 100%;
+    min-height: 100%;
     position: relative;
     background: white;
     max-width: 840px;
@@ -210,8 +213,8 @@ $innerPadding:10px;
         }
     }
     &__footer{
-        // position: absolute;
-        // bottom: 0;
+        /*position: absolute;
+        bottom: 0;*/
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-column-gap: 40px;
